--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,9 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'joda-time:joda-time:2.9.9'
+
+    // AWS SDK for Android
+    compile 'com.amazonaws:aws-android-sdk-core:2.6.+'
+    compile 'com.amazonaws:aws-android-sdk-auth-core:2.6.+@aar'
+    compile 'com.amazonaws:aws-android-sdk-pinpoint:2.6.+'
 }
